fix gap style footer

--- a/src/style.scss
+++ b/src/style.scss
@@ -191,7 +191,7 @@ $greyColor: #abaeb4;
             justify-content: flex-start;
             font-size: 1.3em;
             align-items: self-end;
-            gap: 27%;
+            gap: 30%;
 
             img{
                 width: 10vw;
